Switch to hash and hash_algorithm
