# jupyter_server/services/contents/handlers.py
@@ -44,14 +44,14 @@ def _validate_in_or_not(expect_in_model: bool, model: Dict[str, Any], maybe_none
             )
 
 
-def validate_model(model, expect_content, expect_sha256):
+def validate_model(model, expect_content, expect_hash):
     """
     Validate a model returned by a ContentsManager method.
 
     If expect_content is True, then we expect non-null entries for 'content'
     and 'format'.
 
-    If expect_sha256 is True, then we expect non-null entries for 'sha256'.
+    If expect_hash is True, then we expect non-null entries for 'hash' and 'hash_algorithm'.
     """
     required_keys = {
         "name",
@@ -63,7 +63,8 @@ def validate_model(model, expect_content, expect_sha256):
         "mimetype",
         "content",
         "format",
-        "sha256",
+        "hash",
+        "hash_algorithm",
     }
     missing = required_keys - set(model.keys())
     if missing:
@@ -73,9 +74,9 @@ def validate_model(model, expect_content, expect_sha256):
         )
 
     content_keys = ["content", "format"]
-    sha256_keys = ["sha256"]
+    hash_keys = ["hash"]
     _validate_in_or_not(expect_content, model, content_keys)
-    _validate_in_or_not(expect_sha256, model, sha256_keys)
+    _validate_in_or_not(expect_hash, model, hash_keys)
 
 
 class ContentsAPIHandler(APIHandler):
@@ -136,10 +137,10 @@ class ContentsHandler(ContentsAPIHandler):
             raise web.HTTPError(400, "Content %r is invalid" % content_str)
         content = int(content_str or "")
 
-        sha256_str = self.get_query_argument("sha256", default="0")
-        if sha256_str not in {"0", "1"}:
-            raise web.HTTPError(400, "Content %r is invalid" % sha256_str)
-        sha256 = int(sha256_str or "")
+        hash_str = self.get_query_argument("hash", default="0")
+        if hash_str not in {"0", "1"}:
+            raise web.HTTPError(400, "Content %r is invalid" % hash_str)
+        require_hash = int(hash_str or "")
 
         if not cm.allow_hidden and await ensure_async(cm.is_hidden(path)):
             await self._finish_error(
@@ -151,12 +152,12 @@ class ContentsHandler(ContentsAPIHandler):
             "format": format,
             "content": content,
         }
-        if cm.support_sha256:
-            kwargs["sha256"] = sha256
+        if cm.support_hash:
+            kwargs["require_hash"] = require_hash
 
         try:
             model = await ensure_async(self.contents_manager.get(**kwargs))
-            validate_model(model, expect_content=content, expect_sha256=sha256)
+            validate_model(model, expect_content=content, expect_hash=require_hash)
             self._finish_model(model, location=False)
         except web.HTTPError as exc:
             # 404 is okay in this context, catch exception and return 404 code to prevent stack trace on client
@@ -186,7 +187,7 @@ class ContentsHandler(ContentsAPIHandler):
             raise web.HTTPError(400, f"Cannot rename file or directory {path!r}")
 
         model = await ensure_async(cm.update(model, path))
-        validate_model(model, expect_content=False, expect_sha256=False)
+        validate_model(model, expect_content=False, expect_hash=False)
         self._finish_model(model)
 
     async def _copy(self, copy_from, copy_to=None):
@@ -199,7 +200,7 @@ class ContentsHandler(ContentsAPIHandler):
         )
         model = await ensure_async(self.contents_manager.copy(copy_from, copy_to))
         self.set_status(201)
-        validate_model(model, expect_content=False, expect_sha256=False)
+        validate_model(model, expect_content=False, expect_hash=False)
         self._finish_model(model)
 
     async def _upload(self, model, path):
@@ -207,7 +208,7 @@ class ContentsHandler(ContentsAPIHandler):
         self.log.info("Uploading file to %s", path)
         model = await ensure_async(self.contents_manager.new(model, path))
         self.set_status(201)
-        validate_model(model, expect_content=False, expect_sha256=False)
+        validate_model(model, expect_content=False, expect_hash=False)
         self._finish_model(model)
 
     async def _new_untitled(self, path, type="", ext=""):
@@ -217,7 +218,7 @@ class ContentsHandler(ContentsAPIHandler):
             self.contents_manager.new_untitled(path=path, type=type, ext=ext)
         )
         self.set_status(201)
-        validate_model(model, expect_content=False, expect_sha256=False)
+        validate_model(model, expect_content=False, expect_hash=False)
         self._finish_model(model)
 
     async def _save(self, model, path):
@@ -226,7 +227,7 @@ class ContentsHandler(ContentsAPIHandler):
         if not chunk or chunk == -1:  # Avoid tedious log information
             self.log.info("Saving file at %s", path)
         model = await ensure_async(self.contents_manager.save(model, path))
-        validate_model(model, expect_content=False, expect_sha256=False)
+        validate_model(model, expect_content=False, expect_hash=False)
         self._finish_model(model)
 
     @web.authenticated
